--- a/css/styles.css
+++ b/css/styles.css
@@ -875,7 +875,7 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
     color: var(--st-patricks-blue);
 }
 
-.volunteerTeam .teamShare p{
+.volunteerTeam .teamShare p {
     color: #222;
     width: 100%;
 }
@@ -931,7 +931,7 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
 
 
 
-/* Styling the voluntters section starts */
+/* Styling the voluntters section ends */
 
 
 
@@ -1289,7 +1289,17 @@ come up and not stay down as it was before */
 
     }
 
+    /* The volunteers section */
 
+
+    .volunteerTeam .volunteer2 {
+        margin-top: 200px;
+    }
+
+    .volunteerTeam .volunteer3 {
+        margin-top: 200px;
+    }
+    
     .eventsCenter .event2 {
         width: 100%;
         margin-top: 20px;
@@ -1382,6 +1392,10 @@ come up and not stay down as it was before */
         grid-template-columns: repeat(2, 1fr);
     }
 
+    .team .volunteerTeam {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
 
 
 
@@ -1451,15 +1465,15 @@ come up and not stay down as it was before */
     /* the volunteer team section styling */
 
     .volunteerTeam .volunteer1 {
-        width: 100%;
+        width: 95%;
     }
 
     .volunteerTeam .volunteer2 {
-        width: 100%;
+        width: 95%;
     }
 
     .volunteerTeam .volunteer3 {
-        width: 100%;
+        width: 95%;
     }
 
 
@@ -1500,6 +1514,10 @@ come up and not stay down as it was before */
         grid-template-columns: 1fr 1fr;
     }
 
+    .eventsCenter {
+        grid-template-columns: 1fr 1fr;
+    }
+
     /* The goals section styling */
     .goals-list>li:first-child {
         margin-block-end: 0;
@@ -1510,6 +1528,15 @@ come up and not stay down as it was before */
         grid-template-columns: 1fr 1fr;
         gap: 25px;
     }
+
+    /* .volunteerTeam .volunteer2 {
+        margin-top: 200px;
+    }*/
+
+    .volunteerTeam .volunteer3 {
+        margin-top: 200px;
+    } 
+    
 
 
 
