--- a/css/styles.css
+++ b/css/styles.css
@@ -1181,13 +1181,78 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
 
 
 /* The side bar section for events.html starts */
+main .eventTypes {
+    margin-top: 100px;
+}
 
-main .event-content{
+main .event-content {
     display: grid;
     grid-template-columns: 70% 30%;
+
+}
+
+.eventType1 p {
+    margin-top: 33px;
+}
+
+.eventTypes .event-img {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/blog-4.jpg");
+    width: 70%;
+    height: 350px;
+    border-radius: 10px;
+    background-size: cover;
+    cursor: pointer;
+}
+
+.eventTypes .event-img2 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/blog-3.jpg");
+    width: 70%;
+    height: 350px;
+    border-radius: 10px;
+    background-size: cover;
+    cursor: pointer;
+}
+
+.eventTypes .event-img3 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.77)), url("../img/blog-1.jpg");
+    width: 70%;
+    height: 350px;
+    border-radius: 10px;
+    background-size: cover;
+    cursor: pointer;
+}
+
+.event-content .event-Time h2 {}
+
+.eventTypes .event-Time {
+    display: inline-flex;
+    position: left;
+    background: var(--chrome-yellow);
+    width: 240px;
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 291px;
+    margin-left: 333px;
 }
 
 
+.sidebar .detail {
+    display: inline-block;
+    font-weight: var(--fw-700);
+}
+
+.sidebar h1 {
+    margin-left: 50px;
+    font-size: 20px;
+}
+
+.sidebar .detali-one-one {
+    margin-top: 40px;
+}
+
+.sidebar h1 {
+    margin-top: 28px;
+}
 
 /* The side bar section for events.html ends */
 
@@ -1533,6 +1598,12 @@ come up and not stay down as it was before */
         margin-left: 70px;
         margin-top: -15px;
     }
+
+
+    .eventTypes .event-Time {
+        margin-left: 30px;
+    }
+
 }
 
 
@@ -1546,6 +1617,10 @@ come up and not stay down as it was before */
     .percent {
         margin-left: 120px;
         margin-top: -15px;
+    }
+
+    .eventTypes .event-Time {
+        margin-left: 30px;
     }
 }
 
@@ -1952,8 +2027,38 @@ come up and not stay down as it was before */
 
 /* MEDIA QUERY FOR THE sidebar */
 
-@media only screen and (max-width: 750px){
-    main .event-content{
+@media only screen and (max-width: 750px) {
+    main .event-content {
         grid-template-columns: 100%;
     }
+
+    .event-content .event-img {
+        width: 100%;
+    }
+
+    .event-content .event-img2 {
+        width: 100%;
+    }
+
+    .event-content .event-img3 {
+        width: 100%;
+    }
+
+
+    /* .event-content .event-Time {
+        display: inline-flex;
+        position: left;
+        background: var(--chrome-yellow);
+        width: 80px;
+        /* padding: 15px;
+        border-radius: 20%;
+        margin-top: 20px;
+        margin-left: 390px; 
+    } */
+
+
+    .eventTypes .event-Time {
+        margin-left: 80px;
+    }
+
 }
