--- a/css/styles.css
+++ b/css/styles.css
@@ -1166,8 +1166,6 @@ fontsize --fs-6 or any number and remove any card you changed it's font size in 
     background-repeat: no-repeat;
     height: 300px;
     width: 100%;
-
-
 }
 
 .allBanner h2 {
@@ -1259,7 +1257,24 @@ main .event-content {
 
 
 
+/* Starting the styling for the campaign.html page */
 
+
+.allBanner2 {
+    background-image: url("../img/banner-bg.webp");
+    background-repeat: no-repeat;
+    height: 300px;
+    width: 100%;
+}
+
+.allBanner2 h2 {
+    margin-top: 110px;
+    color: var(--black_70);
+    text-align: center;
+    font-size: 45px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: var(--fw-500);
+}
 
 
 
