--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,11 @@ we want to edit scroll-bar now */
 
 
 /* Re used style starts */
+
+.text-gray{
+    color: var(--black_70);
+}
+
 .h2 {
     font-family: var(--ff-source-sans-pro);
 }
@@ -1687,7 +1692,7 @@ main .event-content {
     font-weight: var(--fw-500);
 }
 
-.allBanner3 .infos i {
+.infos i {
     font-style: normal;
     color: var(--black_70);
     font-size: 16px;
@@ -1732,8 +1737,6 @@ main .event-content {
 }
 
 .featured-one i {
-
-    font-style: normal;
     margin-left: 30px;
     color: var(--white);
 }
@@ -1780,6 +1783,84 @@ main .event-content {
 }
 
 
+/* The read-Up section starts */
+
+.read-Up{
+    margin-top: 70px;
+}
+
+/* site-content section starts */
+
+main .read-Up .site-content{
+    display: grid;
+    grid-template-columns: 70% 30%;
+}
+
+main .read-Up .post-content{
+    width: 100%;
+    margin-bottom: 5rem;
+}
+
+main .site-content .post-content > .post-image, .post-title{
+    padding: 1rem 2rem;
+    position: relative;
+}
+
+/* Code for centering our post info to the blog picture */
+main .site-content .post-content > .post-image .post-info{
+    background: var(--rajah);
+    padding: 1rem;
+    position: absolute;
+    bottom: 0%;
+    left: 20vw;
+    border-radius: 3rem;
+}
+
+main .site-content .post-content > .post-image > div{
+    overflow: hidden;
+}
+
+main .site-content .post-content > .post-image .img{
+    width: 100%;
+    transition: all 1s ease;
+}
+
+/* Creating an hover effect on the image */
+
+main .site-content .post-content > .post-image .img:hover{
+    transform: scale(1.3);
+}
+
+main .site-content .post-content > .post-image .post-info span{
+    margin: 0.5rem;
+}
+
+main .post-content .post-title a{
+    font-family: var(--ff-poppins);
+    font-size: var(--fs-6);
+} 
+
+.site-content .post-content .post-title .post-btn{
+    border-radius: 0;
+    padding: 0.7rem 1.5rem;
+    background: var(--rajah);
+}
+
+
+
+/* if internet works and the class for flex-row is also working, remove this: */
+
+.flex-row{
+    display: inline-flex;
+}
+
+
+/* site-content section ends */
+
+
+
+
+/* The read-Up section ends */
 
 
 
