--- a/css/styles.css
+++ b/css/styles.css
@@ -1962,6 +1962,33 @@ main .post-content .post-title a{
     font-size: 1.6rem;
 }
 
+/* The newsletter in the sidebar */
+
+.site-content .blog-sidebar .newsletter{
+    padding-top: 3rem;
+}
+
+.site-content .blog-sidebar .newsletter .form-element{
+    padding: 0.5rem 2rem;
+}
+
+.site-content .blog-sidebar .newsletter .inputted-element{
+    width: 80%;
+    height: 40px;
+    padding: 0.3rem 0.5rem;
+    font-family: var(--ff-poppins);
+    font-size: 1.5rem;
+    border: 1px solid #222;
+}
+
+.site-content .blog-sidebar .newsletter .form-btn{
+    border-radius: 0;
+    margin: 1rem 0;
+}
+
+
+
+
 
 
 /* The sidebar section ends */
